trying to fix input bug on mobile 2

--- a/css/style.css
+++ b/css/style.css
@@ -72,8 +72,7 @@ input.input-color {
 
   input.input-color {
     font-size: 2em;
-    display: block;
-    width: 100%; } }
+    display: flex; } }
 .color-picker {
   display: flex;
   height: 3em;
